src/objects/Weekly_Huddle__c.object
<CustomObject>
    <fields>
        <fullName>Close_Rate_Goal__c</fullName>
        <description>Indicates the target close rate the PEC will try for this week.</description>
        <label>Close Rate Goal</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completed_Time__c</fullName>
        <description>Time snapshot for when the user submitted the weekly huddle.</description>
        <label>Completed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_of_Callbacks__c</fullName>
        <description>Target number of callbacks the user is aiming for this week</description>
        <label>Number of Callbacks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pulse_Check__c</fullName>
        <description>How is the user feeling this week</description>
        <label>Pulse Check</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rainmaker_How_Score__c</fullName>
        <description>Target score the user will shoot for this week in the pec scorecards.</description>
        <label>Rainmaker How Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rainmaker_Skill_Category__c</fullName>
        <description>Top Level category that the pec will focus on this week</description>
        <label>Rainmaker Skill Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Framing</fullName>
                </value>
                <value>
                    <fullName>Needs Dialogue</fullName>
                </value>
                <value>
                    <fullName>Doctor Download</fullName>
                </value>
                <value>
                    <fullName>Solutions Dialogue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rainmaker_Sub_Skill_Category__c</fullName>
        <description>Sub Skill the pec will focus on this week</description>
        <label>Rainmaker Sub Skill Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Rainmaker_Skill_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Framing the consultation</fullName>
                </value>
                <value>
                    <fullName>Framing Needs Dialogue</fullName>
                </value>
                <value>
                    <fullName>Asking Vision Questions</fullName>
                </value>
                <value>
                    <fullName>Transition from history to future</fullName>
                </value>
                <value>
                    <fullName>Asking challenge questions</fullName>
                </value>
                <value>
                    <fullName>Asking objective questions</fullName>
                </value>
                <value>
                    <fullName>Double Clicking</fullName>
                </value>
                <value>
                    <fullName>The Wrap Up</fullName>
                </value>
                <value>
                    <fullName>Using the &quot;I&quot; message</fullName>
                </value>
                <value>
                    <fullName>Reassurance</fullName>
                </value>
                <value>
                    <fullName>Focus on: Empathy, Connectedness, or Authenticity</fullName>
                </value>
                <value>
                    <fullName>Empathetic Listening</fullName>
                </value>
                <value>
                    <fullName>Summarizing consult&apos;s vision, objectives, challenges</fullName>
                </value>
                <value>
                    <fullName>Role Play recommendation with the Doctor</fullName>
                </value>
                <value>
                    <fullName>Bridge Vision to Doctor&apos;s recommendation</fullName>
                </value>
                <value>
                    <fullName>Framing Investment</fullName>
                </value>
                <value>
                    <fullName>Resolving Objections</fullName>
                </value>
                <value>
                    <fullName>Framing the financial worksheet</fullName>
                </value>
                <value>
                    <fullName>Framing the financial questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rainmaker_What_Score__c</fullName>
        <description>Target score the user will shoot for this week in the pec scorecards.</description>
        <label>Rainmaker What Score</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ScoreCard_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScoreCard Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Week_Start__c</fullName>
        <description>Monday of the week the scorecard is for</description>
        <label>Week Start</label>
        <type>Date</type>
    </fields>
    <label>Weekly_Huddle</label>
    <nameField>
        <displayFormat>WH-{0000}</displayFormat>
        <label>Weekly_Huddle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly_Huddles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>